@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 phodevi: CPU-therm reporting via sysfs for CPU core temp
+phodevi: GPU-therm reporting via sysfs for GPU core temp
 
 Phoronix Test Suite 8.8.0 Milestone 1
 16 March 2019
